# databento_toolkit

./: .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
src/: client.rs  gui.rs  lib.rs  main.rs  types.rs
src/commands/: download.rs  get_cost.rs  get_quote.rs  mod.rs
src/custom_datepicker/: button.rs  mod.rs  popup.rs
src/downloader/: contracts.rs  decode.rs  fetch.rs  mod.rs
tests/: integration_download.rs
