[package]
name = "databento_toolkit"
version = "0.1.0"
edition = "2024"

[features]
serde = []

[dependencies]
databento = "0.31.0"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.47.0", features = ["full"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
async-compression = "0.4.27"
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
eframe = "0.32.0"
egui_extras = { version = "0.32", default-features = false, features = ["chrono", "datepicker"] }
chrono = "0.4.41"
